# mytrade

./: .gitignore  AGENTS.md  LICENSE  README.md  mean_reversion_backtest_plan.md  pyproject.toml
artifacts/mean_reversion/: base_equity_curve.csv  base_summary.csv  base_trades.csv  comparison.csv  slippage_equity_curve.csv  slippage_summary.csv  slippage_trades.csv
data/csv/: QQQ.csv
data/parquet/: IVV.parquet  QQQ.parquet
docs/: 2026-04-19-dca-backtest-handoff.md  2026-04-19-dca-backtest-session-prompt.md
docs/superpowers/plans/: 2026-04-18-data-source-and-strategy-modularization.md  2026-04-18-global-results-portal.md  2026-04-18-mean-reversion-backtester.md  2026-04-18-results-review-and-presentation.md  2026-04-18-strategy-modularization.md  2026-04-19-results-report-ux.md  2026-04-21-crypto-strategy-family.md
docs/superpowers/specs/: 2026-04-18-data-source-and-strategy-modularization-design.md  2026-04-18-global-results-portal-design.md  2026-04-18-results-review-and-presentation-design.md  2026-04-18-strategy-modularization-design.md  2026-04-19-results-report-ux-design.md  2026-04-20-crypto-strategy-family-design.md
mean_reversion/: __init__.py
src/mean_reversion/: __init__.py  backtest.py  cli.py  config.py  data.py  indicators.py  reporting.py  strategy.py
src/mean_reversion/data_sources/: base.py  (+5 more)
tests/: test_backtest.py  test_cli.py  test_data.py  test_data_sources.py  test_indicators.py  test_results_fingerprint.py  test_results_index.py  test_results_paths.py  test_results_writer.py  test_strategy.py
tests/fixtures/: sample_daily_bars.csv
(+24 files in other folders)
